--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div id="header">
-  <% unless current_user %>
-    <%= link_to "sign in", sign_in_path %>
+  <% unless signed_in? %>
+    <%= link_to t('user.login_in'), sign_in_path %>
     <%= link_to "sign up", sign_up_path %>
   <% else %>
     <%= link_to "logout", sign_out_path %>
