--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <div class="headerwrap">
       <div id="header" class="container">
-        <div id="logo" class="grid_6">Logo</div>
+        <div id="logo" class="grid_6"><%= link_to(image_tag('opentheque-logo.gif'), root_path) %></div>
         <div id="myaccount" class="grid_6">
           <%= render "/shared/header" %>
         </div>
