--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,4 @@
-<div class="slider">Items slider</div>
+<div class="slider">
+  <%= render :partial => '/items/item', :collection => @recents %>
+  
+</div>
