Added some missing translations, switched to fr by default

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <div class="slider">
-  <%= render :partial => '/items/item', :collection => @recents %>
-  
+  Slider
 </div>
+<%= render :partial => '/items/item', :collection => @recents %>
+
